# src/routes/auth_router.rs
@@ -11,6 +11,8 @@ use serde::{Deserialize, Serialize};
 
 use serde_json::json;
 
+use crate::routes::functions::auth::*;
+
 #[derive(Serialize)]
 struct Obj {
     name: String,
@@ -19,14 +21,14 @@ struct Obj {
 #[derive(Deserialize, Serialize)]
 pub struct User {
     pub idx: i32,
-    pub id: String,
+    pub email: String,
     pub password: String,
     pub name: String,
 }
 
 #[derive(Deserialize, Serialize)]
 pub struct LoginParam {
-    pub id: String,
+    pub email: String,
     pub password: String,
 }
 
@@ -43,7 +45,7 @@ pub async fn login(data: web::Form<LoginParam>) -> HttpResponse {
 
     let stmt = db
         .conn
-        .prep(r"SELECT idx, id, password, name from users where id = :id")
+        .prep(r"SELECT idx, email, password, name from users where email = :email")
         .expect("stmt error");
 
     let row: Vec<User> = db
@@ -51,33 +53,38 @@ pub async fn login(data: web::Form<LoginParam>) -> HttpResponse {
         .exec_map(
             stmt,
             params! {
-              "id" => &data.id,
+              "email" => &data.email,
             },
-            |(idx, id, password, name)| User {
+            |(idx, email, password, name)| User {
                 idx,
-                id,
+                email,
                 password,
                 name,
             },
         )
         .expect("select Error");
 
-    println!("{}, {}", hash_pw, row[0].password);
-
     if hash_pw != row[0].password {
         HttpResponse::Unauthorized()
             .content_type(ContentType::json())
             .body("{ \"code\" : 0}")
     } else {
+        let token: String = issue_jwt(&row[0]);
+
+        let json = json!({
+            "code" : 1,
+            "token" : token
+        });
+
         HttpResponse::Ok()
             .content_type(ContentType::json())
-            .body("{ \"code\" : 1}")
+            .body(serde_json::to_string(&json).expect("Error!"))
     }
 }
 
 #[derive(Deserialize, Serialize)]
 pub struct Register {
-    pub id: String,
+    pub email: String,
     pub password: String,
     pub name: String,
 }
@@ -95,7 +102,7 @@ pub async fn register(data: web::Form<Register>) -> impl Responder {
 
     let stmt = db
         .conn
-        .prep(r"INSERT INTO users(id, password, name) VALUES (:id, :password, :name)")
+        .prep(r"INSERT INTO users(email, password, name) VALUES (:email, :password, :name)")
         .expect("Error!");
 
     let mut json = json!({});
@@ -103,7 +110,7 @@ pub async fn register(data: web::Form<Register>) -> impl Responder {
     match db.conn.exec_drop(
         stmt,
         params! {
-          "id" => &data.id,
+          "email" => &data.email,
           "password" => hash_pw,
           "name" => &data.name
         },
@@ -113,7 +120,7 @@ pub async fn register(data: web::Form<Register>) -> impl Responder {
         }
         Err(_) => {
             json["code"] = json!(0);
-            json["description"] = json!("duplication id");
+            json["description"] = json!("duplication email");
         }
     }
 
@@ -121,27 +128,27 @@ pub async fn register(data: web::Form<Register>) -> impl Responder {
 }
 
 #[derive(Deserialize, Serialize, Debug)]
-pub struct Id {
-    pub id: String,
+pub struct Email {
+    pub email: String,
 }
 
 #[post("/check")]
-pub async fn check_duple(data: web::Form<Id>) -> impl Responder {
+pub async fn check_duple(data: web::Form<Email>) -> impl Responder {
     let mut db = DataBase::init();
 
     let stmt = db
         .conn
-        .prep(r"SELECT id from users where id = :id")
+        .prep(r"SELECT email from users where email = :email")
         .expect("stmt error");
 
-    let data: Vec<Id> = db
+    let data: Vec<Email> = db
         .conn
         .exec_map(
             stmt,
             params! {
-              "id" => &data.id,
+              "email" => &data.email,
             },
-            |id| Id { id },
+            |email| Email { email },
         )
         .expect("Error");
 
@@ -150,4 +157,49 @@ pub async fn check_duple(data: web::Form<Id>) -> impl Responder {
     let json = json!({ "message": i });
 
     web::Json(json)
+}
+
+#[post("/email/key")]
+pub async fn send_key(data: web::Form<Email>) -> impl Responder {
+    //1. create Code
+    let code = create_code();
+
+    //2. save in redis with email, code, time( 3분 초과시 안되게 할것이기 때문)
+    save_redis(&data.email, &code);
+
+    //3. 이메일 전송
+    match send_mail(&data.email, &code) {
+        Ok(_) => {
+            let json = json!({ "code": 1 });
+            web::Json(json)
+        }
+        Err(_) => {
+            let json = json!({ "code": 0 });
+
+            web::Json(json)
+        }
+    }
+}
+
+#[derive(Deserialize, Serialize, Debug)]
+pub struct Verify {
+    pub email: String,
+    pub code: String,
+}
+
+#[post("/email/auth")]
+pub async fn email_auth(verify: web::Form<Verify>) -> impl Responder {
+    //1. email이 저장되어있는지 확인
+    let value = get_redis_email(&verify.email);
+
+    //값이 없으면 0 리턴
+    if value == "{}" {
+        let json = json!({ "code": 0, "description" : "not exist email value" });
+        return web::Json(json);
+    } else {
+        //값이 있으면 코드 값과, 시간 경과 여부를 확인합니다.
+        let json = verify_code(&verify, &value);
+
+        return web::Json(json);
+    }
 }
